trying to fix horizontal scroll on chrome android, again2

--- a/_sass/elementaire/_base.scss
+++ b/_sass/elementaire/_base.scss
@@ -25,11 +25,13 @@
    font-kerning: normal;
    min-height: 100vh;
    max-width: 100%;
+   width: 100%;
    overflow-x: hidden;
  }
 
  html {
    max-width: 100%;
+   width: 100%;
    overflow-x: hidden;
  }
  
